[gd_scene load_steps=45 format=2]

[ext_resource path="res://Environment/Asset/Emotional Flare/Flare Bg (cropped).png" type="Texture" id=1]
[ext_resource path="res://Main Character/Scene/Marshall.tscn" type="PackedScene" id=2]
[ext_resource path="res://Environment/Asset/Panda House/Bed_1.png" type="Texture" id=3]
[ext_resource path="res://Environment/Asset/Emotional Flare/blood_c_0001-removebg-preview.png" type="Texture" id=4]
[ext_resource path="res://Enemy/Script/Weasel (2).gd" type="Script" id=5]
[ext_resource path="res://Enemy/Asset/Fox (Jackal)/jackal sprite 1 (1).png" type="Texture" id=6]
[ext_resource path="res://Enemy/Script/Fox (2).gd" type="Script" id=7]
[ext_resource path="res://Environment/Asset/Front House/Jalan.png" type="Texture" id=8]
[ext_resource path="res://Enemy/Asset/Fox (Jackal)/jackal sprite 4.png" type="Texture" id=9]
[ext_resource path="res://Enemy/Asset/Fox (Jackal)/jackal sprite a1.png" type="Texture" id=10]
[ext_resource path="res://Enemy/Asset/Fox (Jackal)/jackal sprite a2.png" type="Texture" id=11]
[ext_resource path="res://Enemy/Asset/Fox (Jackal)/jackal sprite a4.png" type="Texture" id=12]
[ext_resource path="res://Enemy/Asset/Weasel/Kiri_2.png" type="Texture" id=13]
[ext_resource path="res://Enemy/Asset/Weasel/Kiri_3.png" type="Texture" id=14]
[ext_resource path="res://Enemy/Asset/Fox (Jackal)/jackal sprite 3.png" type="Texture" id=15]
[ext_resource path="res://Enemy/Asset/Weasel/Depan_1.png" type="Texture" id=16]
[ext_resource path="res://Enemy/Asset/Weasel/Depan_2.png" type="Texture" id=17]
[ext_resource path="res://Enemy/Asset/Weasel/Depan_3.png" type="Texture" id=18]
[ext_resource path="res://Enemy/Asset/Weasel/Bawah_2.png" type="Texture" id=19]
[ext_resource path="res://Enemy/Asset/Fox (Jackal)/jackal sprite a3.png" type="Texture" id=20]
[ext_resource path="res://Enemy/Asset/Weasel/Kanan_1.png" type="Texture" id=21]
[ext_resource path="res://Enemy/Asset/Fox (Jackal)/jackal sprite 2 (1).png" type="Texture" id=22]
[ext_resource path="res://Enemy/Asset/Weasel/Kanan_2.png" type="Texture" id=23]
[ext_resource path="res://Enemy/Asset/Weasel/Bawah_1.png" type="Texture" id=24]
[ext_resource path="res://Enemy/Asset/Weasel/Bawah_3.png" type="Texture" id=25]
[ext_resource path="res://Enemy/Asset/Weasel/Kiri_1.png" type="Texture" id=26]
[ext_resource path="res://Enemy/Asset/Weasel/Kanan_3.png" type="Texture" id=27]
[ext_resource path="res://Enemy/Scene/Leopard.tscn" type="PackedScene" id=28]
[ext_resource path="res://UI/Scene/Level UI.tscn" type="PackedScene" id=29]
[ext_resource path="res://Environment/Script/Emotional Flare (2).gd" type="Script" id=30]
[ext_resource path="res://Environment/Scene/Health Piece.tscn" type="PackedScene" id=31]
[ext_resource path="res://Environment/Scene/Fragment Piece.tscn" type="PackedScene" id=32]
[ext_resource path="res://Sound/Emo Flare.wav" type="AudioStream" id=33]
[ext_resource path="res://UI/Scene/Scene Transition.tscn" type="PackedScene" id=34]
[ext_resource path="res://Sound/Pickup.wav" type="AudioStream" id=35]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4168, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 832, 10 )

[sub_resource type="CircleShape2D" id=3]
radius = 442.378

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "Kiri",
"speed": 8.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 23 ), ExtResource( 27 ) ],
"loop": true,
"name": "Kanan",
"speed": 8.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 19 ), ExtResource( 25 ) ],
"loop": true,
"name": "Bawah",
"speed": 8.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "Depan",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 130.106

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 22 ), ExtResource( 15 ), ExtResource( 9 ) ],
"loop": true,
"name": "Kiri",
"speed": 8.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 20 ), ExtResource( 12 ) ],
"loop": true,
"name": "Kanan",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 97.5233
height = 122.396

[sub_resource type="CircleShape2D" id=8]
radius = 390.664

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 192, 32 )

[node name="Emotional Flare (2)" type="Node2D"]
script = ExtResource( 30 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )

[node name="Flare Bg (cropped)" type="Sprite" parent="."]
position = Vector2( 4144, 1080 )
scale = Vector2( 8, 2.85 )
texture = ExtResource( 1 )

[node name="Blood" type="Sprite" parent="."]
position = Vector2( 344, 1024 )
rotation = 3.14159
scale = Vector2( 1.43444, 1.32162 )
texture = ExtResource( 4 )

[node name="Blood2" type="Sprite" parent="."]
position = Vector2( 572.424, 1019.58 )
rotation = 2.35619
scale = Vector2( 0.990815, 1.7614 )
texture = ExtResource( 4 )

[node name="Blood3" type="Sprite" parent="."]
position = Vector2( 472, 936 )
rotation = 0.523598
scale = Vector2( 1.22751, 1.55995 )
texture = ExtResource( 4 )

[node name="Jalan2" type="Sprite" parent="."]
position = Vector2( 680, 1320 )
rotation = -3.14159
scale = Vector2( 0.844209, 0.777392 )
texture = ExtResource( 8 )

[node name="Jalan4" type="Sprite" parent="."]
position = Vector2( 2858.79, 1240 )
scale = Vector2( 1.8173, 0.777392 )
texture = ExtResource( 8 )

[node name="Jalan" type="Sprite" parent="."]
position = Vector2( 1224, 928 )
rotation = -1.57079
scale = Vector2( 0.348814, 1 )
texture = ExtResource( 8 )

[node name="Jalan5" type="Sprite" parent="."]
position = Vector2( 4240, 930.97 )
rotation = -1.57079
scale = Vector2( 0.35212, 1 )
texture = ExtResource( 8 )

[node name="Jalan3" type="Sprite" parent="."]
position = Vector2( 1328, 1766.07 )
rotation = 1.57079
scale = Vector2( 0.499589, 1.01708 )
texture = ExtResource( 8 )

[node name="Jalan6" type="Sprite" parent="."]
position = Vector2( 4336, 1735.03 )
rotation = 1.57079
scale = Vector2( 0.534206, 1.01708 )
texture = ExtResource( 8 )

[node name="Jalan7" type="Sprite" parent="."]
position = Vector2( 6340.04, 1224 )
scale = Vector2( 2.33347, 1 )
texture = ExtResource( 8 )

[node name="Wall Stage" type="StaticBody2D" parent="."]
position = Vector2( 2872, 1280 )

[node name="Atas" type="CollisionShape2D" parent="Wall Stage"]
position = Vector2( 1256, -768 )
shape = SubResource( 1 )

[node name="Bawah" type="CollisionShape2D" parent="Wall Stage"]
position = Vector2( 1256, 904 )
shape = SubResource( 1 )

[node name="Kiri" type="CollisionShape2D" parent="Wall Stage"]
position = Vector2( -2896, 80 )
rotation = -1.57079
shape = SubResource( 2 )

[node name="Kanan" type="CollisionShape2D" parent="Wall Stage"]
position = Vector2( 5432, 72 )
rotation = -1.57079
shape = SubResource( 2 )

[node name="Health Piece" parent="." instance=ExtResource( 31 )]
position = Vector2( 2486.79, 1184 )

[node name="Fragment Piece" parent="." instance=ExtResource( 32 )]
position = Vector2( 465.13, 1240 )

[node name="Fragment Piece2" parent="." instance=ExtResource( 32 )]
position = Vector2( 4272, 1440 )

[node name="Fragment Piece3" parent="." instance=ExtResource( 32 )]
position = Vector2( 7888, 1024 )

[node name="Fragment Piece4" parent="." instance=ExtResource( 32 )]
position = Vector2( 2728, 808 )

[node name="YSort - Player" type="YSort" parent="."]

[node name="Marshall" parent="YSort - Player" instance=ExtResource( 2 )]
position = Vector2( 472, 696 )

[node name="Camera2D" type="Camera2D" parent="YSort - Player/Marshall"]
current = true
zoom = Vector2( 1.3, 1.3 )
limit_left = -37
limit_top = -38
limit_right = 8320
limit_bottom = 2189
limit_smoothed = true
smoothing_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Weasel" type="KinematicBody2D" parent="YSort - Player" groups=[
"Enemy",
]]
position = Vector2( 7472, 1000 )
collision_layer = 9
collision_mask = 5
script = ExtResource( 5 )

[node name="Patrol Timer" type="Timer" parent="YSort - Player/Weasel"]
wait_time = 2.0
one_shot = true

[node name="Stun Timer" type="Timer" parent="YSort - Player/Weasel"]
wait_time = 3.0
one_shot = true

[node name="Kiri" type="Position2D" parent="YSort - Player/Weasel"]
position = Vector2( -59.3693, 16.6186 )

[node name="Kanan" type="Position2D" parent="YSort - Player/Weasel"]
position = Vector2( 58.5361, 14.6543 )

[node name="Depan" type="Position2D" parent="YSort - Player/Weasel"]
position = Vector2( -3.9798, -7.55682 )

[node name="Trigger Bawah" type="RayCast2D" parent="YSort - Player/Weasel"]
scale = Vector2( 50.1132, 7.76835 )
enabled = true

[node name="Trigger Atas" type="RayCast2D" parent="YSort - Player/Weasel"]
rotation = 3.14159
scale = Vector2( 50.1132, 7.76835 )
enabled = true

[node name="Trigger Kanan" type="RayCast2D" parent="YSort - Player/Weasel"]
rotation = -1.5708
scale = Vector2( 50.1132, 7.76835 )
enabled = true

[node name="Trigger Kiri" type="RayCast2D" parent="YSort - Player/Weasel"]
rotation = 1.57079
scale = Vector2( 50.1132, 7.76835 )
enabled = true

[node name="Trigger Area" type="Area2D" parent="YSort - Player/Weasel"]

[node name="Trigger Collision" type="CollisionShape2D" parent="YSort - Player/Weasel/Trigger Area"]
position = Vector2( 0, 2.29761 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="YSort - Player/Weasel"]
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 4 )
animation = "Bawah"

[node name="Body Collision" type="CollisionShape2D" parent="YSort - Player/Weasel"]
position = Vector2( -5.58588, -6.31778 )
shape = SubResource( 5 )

[node name="Fox" type="KinematicBody2D" parent="YSort - Player" groups=[
"Enemy",
]]
position = Vector2( 4320, 1736 )
collision_layer = 9
collision_mask = 5
script = ExtResource( 7 )

[node name="Stun Timer" type="Timer" parent="YSort - Player/Fox"]
wait_time = 3.0
one_shot = true

[node name="Horizontal Timer" type="Timer" parent="YSort - Player/Fox"]
wait_time = 3.0
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="YSort - Player/Fox"]
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 6 )
animation = "Kiri"

[node name="Body Collision" type="CollisionShape2D" parent="YSort - Player/Fox"]
position = Vector2( -61.1647, 25.4745 )
rotation = -0.750492
shape = SubResource( 7 )

[node name="Trigger Area" type="Area2D" parent="YSort - Player/Fox"]

[node name="Trigger Collision" type="CollisionShape2D" parent="YSort - Player/Fox/Trigger Area"]
shape = SubResource( 8 )

[node name="Posisi Kiri" type="Position2D" parent="YSort - Player/Fox"]
position = Vector2( -61.2096, 25.7678 )

[node name="Posisi Kanan" type="Position2D" parent="YSort - Player/Fox"]
position = Vector2( 79.0165, 22.7967 )

[node name="Kanan" type="RayCast2D" parent="YSort - Player/Fox"]
position = Vector2( 6.10352e-05, -0.5 )
rotation = -1.57079
scale = Vector2( -53.6807, 6.74996 )
enabled = true

[node name="Kiri" type="RayCast2D" parent="YSort - Player/Fox"]
position = Vector2( 1.46896, -0.5 )
rotation = 1.57079
scale = Vector2( -53.681, 6.75 )
enabled = true

[node name="Leopard" parent="YSort - Player" instance=ExtResource( 28 )]
position = Vector2( 2480, 792 )

[node name="Bed" type="StaticBody2D" parent="YSort - Player"]
position = Vector2( 472, 992 )
collision_mask = 4

[node name="Bed_1" type="Sprite" parent="YSort - Player/Bed"]
position = Vector2( -8, -48 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort - Player/Bed"]
position = Vector2( -8, 0 )
shape = SubResource( 9 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="Level UI" parent="CanvasLayer" instance=ExtResource( 29 )]

[node name="Restart" parent="CanvasLayer/Level UI" index="2"]
visible = false

[node name="Bg Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 33 )
volume_db = 8.5

[node name="Scene Transition" parent="." instance=ExtResource( 34 )]

[node name="Pickup Items" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 35 )
volume_db = -5.0

[connection signal="get_health" from="Health Piece" to="." method="_on_Health_Piece_get_health"]
[connection signal="get_fragment" from="Fragment Piece" to="." method="_on_Fragment_Piece_get_fragment"]
[connection signal="get_fragment" from="Fragment Piece2" to="." method="_on_Fragment_Piece_get_fragment"]
[connection signal="get_fragment" from="Fragment Piece3" to="." method="_on_Fragment_Piece_get_fragment"]
[connection signal="get_fragment" from="Fragment Piece4" to="." method="_on_Fragment_Piece_get_fragment"]
[connection signal="dash_on" from="YSort - Player/Marshall" to="CanvasLayer/Level UI/HBoxContainer/Desperate Dash" method="_on_Marshall_dash_on"]
[connection signal="get_damage" from="YSort - Player/Marshall" to="." method="_on_Marshall_get_damage"]
[connection signal="inner_beam_on" from="YSort - Player/Marshall" to="CanvasLayer/Level UI/HBoxContainer/Inner Beam" method="_on_Marshall_inner_beam_on"]
[connection signal="shriek_on" from="YSort - Player/Marshall" to="CanvasLayer/Level UI/HBoxContainer/Shriek" method="_on_Marshall_shriek_on"]
[connection signal="stun_enemy" from="YSort - Player/Marshall" to="YSort - Player/Leopard" method="_on_Marshall_stun_enemy"]
[connection signal="stun_enemy" from="YSort - Player/Marshall" to="YSort - Player/Weasel" method="_on_Marshall_stun_enemy"]
[connection signal="stun_enemy" from="YSort - Player/Marshall" to="YSort - Player/Fox" method="_on_Marshall_stun_enemy"]
[connection signal="timeout" from="YSort - Player/Weasel/Patrol Timer" to="YSort - Player/Weasel" method="_on_Patrol_Timer_timeout"]
[connection signal="timeout" from="YSort - Player/Weasel/Stun Timer" to="YSort - Player/Weasel" method="_on_Stun_Timer_timeout"]
[connection signal="body_entered" from="YSort - Player/Weasel/Trigger Area" to="YSort - Player/Weasel" method="_on_Trigger_Area_body_entered"]
[connection signal="body_exited" from="YSort - Player/Weasel/Trigger Area" to="YSort - Player/Weasel" method="_on_Trigger_Area_body_exited"]
[connection signal="timeout" from="YSort - Player/Fox/Stun Timer" to="YSort - Player/Fox" method="_on_Stun_Timer_timeout"]
[connection signal="timeout" from="YSort - Player/Fox/Horizontal Timer" to="YSort - Player/Fox" method="_on_Horizontal_Timer_timeout"]
[connection signal="body_entered" from="YSort - Player/Fox/Trigger Area" to="YSort - Player/Fox" method="_on_Trigger_Area_body_entered"]
[connection signal="body_exited" from="YSort - Player/Fox/Trigger Area" to="YSort - Player/Fox" method="_on_Trigger_Area_body_exited"]
[connection signal="finished" from="Bg Sound" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="transisi_berjalan" from="Scene Transition" to="." method="_on_Scene_Transition_transisi_berjalan"]

[editable path="CanvasLayer/Level UI"]
